--- a/Fargemannen/View/AnalyseZ.xaml
+++ b/Fargemannen/View/AnalyseZ.xaml
@@ -67,6 +67,95 @@
                     <Button Grid.Column="1" Grid.Row="7" Content="Velg Analyseområde" Command="{Binding VelgAnalyseZCommand}"  Margin="0,3,0,0" />
                 </Grid>
             </TabItem>
+            <TabItem Header="Sett Intervaller" Height="22" Margin="-2,0,-2,2" VerticalAlignment="Bottom">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="20"/>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="20"/>
+                    </Grid.ColumnDefinitions>
+
+                    <Grid.RowDefinitions>
+                        <!-- Legg til nok RowDefinition for antall intervaller du har -->
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <!-- Fortsett med RowDefinition for hvert element -->
+                    </Grid.RowDefinitions>
+
+                    <!-- ItemsControl for intervaller med alternasjon for å plassere elementer i rader -->
+                    <ItemsControl ItemsSource="{Binding IntervallerZ}" Grid.IsSharedSizeScope="True">
+                        <ItemsControl.ItemTemplate>
+                            <DataTemplate>
+                                <Grid Margin="10">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="Auto"/>
+                                        <ColumnDefinition Width="20"/>
+                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="Auto"/>
+                                    </Grid.ColumnDefinitions>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="Auto"/>
+                                        <!-- Navn og knapp -->
+                                        <RowDefinition Height="Auto"/>
+                                        <!-- Fargevelger -->
+                                        <RowDefinition Height="Auto"/>
+                                        <!-- Start-verdi label og textbox -->
+                                        <RowDefinition Height="Auto"/>
+                                        <!-- Slutt-verdi label og textbox -->
+                                    </Grid.RowDefinitions>
+
+                                    <TextBlock Text="{Binding Navn}" FontSize="15" Grid.Column="0" Grid.Row="0" FontFamily="Artifakt Element Medium"/>
+                                    <Button Content="Sett farge"
+Command="{Binding DataContext.ChooseColorCommand, RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}"
+CommandParameter="{Binding}" Grid.Column="0" Grid.Row="1" />
+                                    <Rectangle Stroke="Black" Width="120" Height="20"
+   Fill="{Binding Brush}"
+   Grid.Column="0" Grid.Row="2"/>
+                                    <TextBlock Text="Start-verdi:" FontSize="15" Grid.Column="2" Grid.Row="1" FontFamily="Artifakt Element Medium"/>
+                                    <TextBox Text="{Binding StartVerdi}" Width="100" Grid.Column="3" Grid.Row="1"/>
+                                    <TextBlock Text="Slutt-verdi:" FontSize="15" Grid.Column="2" Grid.Row="2" FontFamily="Artifakt Element Medium"/>
+                                    <TextBox Text="{Binding SluttVerdi}" Width="100" Grid.Column="3" Grid.Row="2"/>
+                                    <TextBlock Text="{Binding Prosent, StringFormat='{}{0:F2} %'}" Margin="5,0" FontWeight="Bold" Grid.Column="4"/>
+
+                                </Grid>
+
+
+                            </DataTemplate>
+
+                        </ItemsControl.ItemTemplate>
+                    </ItemsControl>
+
+                    <StackPanel Grid.Column="2" Grid.Row="0" Orientation="Vertical">
+                        <TextBlock Text="Div verider fra analyse:" FontSize="18" Grid.Column="2" Grid.Row="1" FontFamily="Artifakt Element Medium" Margin="0,30,0,0"/>
+                        <TextBlock Text="Min Verdi:" FontSize="15" Grid.Column="2" Grid.Row="1" FontFamily="Artifakt Element Medium" Margin="0,10,0,0"/>
+                        <TextBlock Text="{Binding MinVerdiZ}" FontSize="15" Grid.Column="2" Grid.Row="5" FontFamily="Artifakt Element Medium" Margin="0,0,0,20"/>
+
+                        <TextBlock Text="Max Verdi:" FontSize="15" Grid.Column="2" Grid.Row="6" FontFamily="Artifakt Element Medium"/>
+                        <TextBlock Text="{Binding MaxVerdiZ}" FontSize="15" Grid.Column="2" Grid.Row="0" FontFamily="Artifakt Element Medium"/>
+
+                        <TextBlock Text="{Binding TotalProsent, StringFormat='Total Prosent: {0:N2}%'}"
+           HorizontalAlignment="Center" VerticalAlignment="Top"
+           FontSize="15" Margin="10" FontFamily="Artifakt Element Medium"/>
+                        <Button Content="Oppdater Total Prosent" Command="{Binding OppdaterTotalProsetCommand}" Grid.Column="3" Grid.Row="6" Width="130"/>
+
+                    </StackPanel>
+                    <TextBlock Text="Gjennomsiktighet" FontSize="15" Grid.Column="0" Grid.Row="1" FontFamily="Artifakt Element Medium"
+                       HorizontalAlignment="Center" Margin="0,20,0,15"/>
+                    <Slider Value="{Binding SliderValue}"
+             Minimum="0" 
+             Maximum="100"
+             Grid.Column="0"
+             Grid.Row="2"
+             Width="250"/>
+                    <Button Content="Lag Fargekart" Command="{Binding KjørFargekartCommand}"
+                    Grid.Column="0" Grid.Row="3" Margin="0,25,0,0" Width="120" Height="40"/>
+                </Grid>
+            </TabItem>
         </TabControl>
 
     </Grid>
