--- a/Fargemannen/View/FileUpload.xaml
+++ b/Fargemannen/View/FileUpload.xaml
@@ -14,29 +14,30 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="200"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-
+        <TextBlock Grid.Column="0" Grid.Row="0" FontSize="20" FontFamily="Artifakt Element Heavy" Text="Last opp filer:(NB pass op at alle er i samme koordinatsystem" Grid.ColumnSpan="2"/>
         <!-- SOSI File Upload -->
-        <Button Content="Last opp SOSI" Command="{Binding UploadSosiCommand}" Grid.Row="0" Grid.Column="0" Margin="5" Padding="5"/>
-        <TextBox Text="{Binding DisplaySosiFilePath, UpdateSourceTrigger=PropertyChanged, Mode=OneWay}" Grid.Row="0" Grid.Column="1" Margin="5" Padding="3"/>
+        <Button Content="Last opp SOSI" Command="{Binding UploadSosiCommand}" Grid.Row="1" Grid.Column="0" Margin="5" Padding="5"/>
+        <TextBox Text="{Binding DisplaySosiFilePath, UpdateSourceTrigger=PropertyChanged, Mode=OneWay}" Grid.Row="1" Grid.Column="1" Margin="5" Padding="3"/>
        
         <!-- SOSIDAGEN File Upload -->
-        <Button Content="Last opp SOSIDAGEN" Command="{Binding UploadSosidagenCommand}" Grid.Row="1" Grid.Column="0" Margin="5" Padding="5"/>
-        <TextBox Text="{Binding DisplaySosidagenFilePath, UpdateSourceTrigger=PropertyChanged, Mode=OneWay}" Grid.Row="1" Grid.Column="1" Margin="5" Padding="3"/>
+        <Button Content="Last opp SOSIDAGEN" Command="{Binding UploadSosidagenCommand}" Grid.Row="2" Grid.Column="0" Margin="5" Padding="5"/>
+        <TextBox Text="{Binding DisplaySosidagenFilePath, UpdateSourceTrigger=PropertyChanged, Mode=OneWay}" Grid.Row="2" Grid.Column="1" Margin="5" Padding="3"/>
 
         <!-- KOF File Upload -->
-        <Button Content="Last opp KOF" Command="{Binding UploadKofCommand}" Grid.Row="2" Grid.Column="0" Margin="5" Padding="5"/>
-        <TextBox Text="{Binding DisplayKofFilePath, UpdateSourceTrigger=PropertyChanged, Mode=OneWay}" Grid.Row="2" Grid.Column="1" Margin="5" Padding="3"/>
+        <Button Content="Last opp KOF" Command="{Binding UploadKofCommand}" Grid.Row="3" Grid.Column="0" Margin="5" Padding="5"/>
+        <TextBox Text="{Binding DisplayKofFilePath, UpdateSourceTrigger=PropertyChanged, Mode=OneWay}" Grid.Row="3" Grid.Column="1" Margin="5" Padding="3"/>
 
 
         <!-- TOT File Upload -->
-        <Button Content="Last opp TOT" Command="{Binding UploadTotCommand}" Grid.Row="3" Grid.Column="0" Margin="5" Padding="5" Height="30" VerticalAlignment="Top"/>
+        <Button Content="Last opp TOT" Command="{Binding UploadTotCommand}" Grid.Row="4" Grid.Column="0" Margin="5" Padding="5" Height="30" VerticalAlignment="Top"/>
         <ListBox ItemsSource="{Binding TotFilePaths}"
-         Grid.Row="3" Grid.Column="1" Margin="5" Height="60"
+         Grid.Row="4" Grid.Column="1" Margin="5" Height="60" 
          ScrollViewer.VerticalScrollBarVisibility="Auto">
             <ListBox.ItemTemplate>
                 <DataTemplate>
@@ -46,12 +47,12 @@
         </ListBox>
 
         <!-- Report Folder Upload -->
-        <Button Content="Last opp Rapport mappe" Command="{Binding UploadReportFolderCommand}" Grid.Row="4" Grid.Column="0" Margin="5" Padding="5"/>
-        <TextBox Text="{Binding DisplayReportFolderPath, UpdateSourceTrigger=PropertyChanged, Mode=OneWay}" Grid.Row="4" Grid.Column="1" Margin="5" Padding="3"/>
+        <Button Content="Last opp Rapport mappe" Command="{Binding UploadReportFolderCommand}" Grid.Row="5" Grid.Column="0" Margin="5" Padding="5"/>
+        <TextBox Text="{Binding DisplayReportFolderPath, UpdateSourceTrigger=PropertyChanged, Mode=OneWay}" Grid.Row="5" Grid.Column="1" Margin="5" Padding="3"/>
 
         <!-- Sample Results Folder Upload -->
-        <Button Content="Last opp Prøveresultat mappe" Command="{Binding UploadSampleResultsFolderCommand}" Grid.Row="5" Grid.Column="0" Margin="5" Padding="5"/>
-        <TextBox Text="{Binding DisplaySampleResultsFolderPath, UpdateSourceTrigger=PropertyChanged,  Mode=OneWay}" Grid.Row="5" Grid.Column="1" Margin="5" Padding="3"/>
+        <Button Content="Last opp Prøveresultat mappe" Command="{Binding UploadSampleResultsFolderCommand}" Grid.Row="6" Grid.Column="0" Margin="5" Padding="5"/>
+        <TextBox Text="{Binding DisplaySampleResultsFolderPath, UpdateSourceTrigger=PropertyChanged,  Mode=OneWay}" Grid.Row="6" Grid.Column="1" Margin="5" Padding="3"/>
     
     </Grid>
 </UserControl>
