--- a/Fargemannen/View/AnalyseZ.xaml
+++ b/Fargemannen/View/AnalyseZ.xaml
@@ -62,9 +62,9 @@
                         <TextBox Text="{Binding BergmodellNavn, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Width="120" Margin="0,0,0,10"/>
                         <TextBlock Text="Navn på lag for bergmodell:" FontSize="15" FontFamily="Artifakt Element Medium" Margin="0,0,0,10"/>
                         <TextBox Text="{Binding BergmodellLagNavn, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Width="120" Margin="0,0,0,10"/>
-                        <Button Command="{Binding LagBergmodellCommand}" Content="Generer Bergmodell" Margin="0,10,0,0" Grid.Column="0" Grid.Row="2" Height="40"/>
+                        
                     </StackPanel>
-
+                    <Button Command="{Binding LagBergmodellCommand}" Content="Generer Bergmodell"  Grid.Column="4" Grid.Row="7" Height="40" Width="120"  Margin="0,3,0,0"/>
                     <Button Grid.Column="1" Grid.Row="7" Content="Velg Analyseområde" Command="{Binding VelgAnalyseZCommand}"  Margin="0,3,0,0" Height="40"/>
                 </Grid>
             </TabItem>
