--- a/Fargemannen/View/Symbols.xaml
+++ b/Fargemannen/View/Symbols.xaml
@@ -5,13 +5,13 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Fargemannen.View"
              xmlns:vm="clr-namespace:Fargemannen.ViewModel"
-           d:DesignHeight="450" d:DesignWidth="800"
+           d:DesignHeight="700" d:DesignWidth="700"
              mc:Ignorable="d" >
 
     <Grid  DataContext="{Binding Source={x:Static vm:SymbolsViewModel.Instance}}" Background="White">
 
         <TabControl>
-            <TabItem Header="Generer Symbol">
+            <TabItem Header="Generer Symbol" Width="350">
                 <Grid Background="White" >
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="20"/>
@@ -59,10 +59,10 @@
 
                     <StackPanel Grid.Column="3" Grid.Row="4" Orientation="Vertical">
                         <TextBlock Text="Minimums årsgrense:" FontSize="15" FontFamily="Artifakt Element Medium" Margin="0,0,0,10"/>
-                        <TextBox Text="{Binding MinYear, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Width="120"/>
+                        <TextBox Text="{Binding MinYear, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Width="120"  HorizontalAlignment="Left"/>
 
                         <TextBlock Text="Minimums bor i fjell:" FontSize="15" FontFamily="Artifakt Element Medium" Margin="0,10,0,10"/>
-                        <TextBox Text="{Binding MinDrillingDepth, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Width="120" Margin="0,0,0,20"/>
+                        <TextBox Text="{Binding MinDrillingDepth, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Width="120" Margin="0,0,0,20" HorizontalAlignment="Left"/>
 
                         <TextBlock Text="Velg prosjekt:" FontSize="15" FontFamily="Artifakt Element Medium" Margin="0,0,0,10"/>
                         <RadioButton Content="PDF-nummer" GroupName="ProjectType" IsChecked="{Binding UsePDFProject, Mode=TwoWay}"/>
@@ -84,7 +84,7 @@
 
                 </Grid>
             </TabItem>
-            <TabItem Header="Rediger Symbol">
+            <TabItem Header="Rediger Symbol" Width="345">
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="20"/>
