--- a/Fargemannen/View/AnalyseXY.xaml
+++ b/Fargemannen/View/AnalyseXY.xaml
@@ -119,7 +119,7 @@
                                     <TextBox Text="{Binding StartVerdi}" Width="100" Grid.Column="3" Grid.Row="1"/>
                                     <TextBlock Text="Slutt-verdi:" FontSize="15" Grid.Column="2" Grid.Row="2" FontFamily="Artifakt Element Medium"/>
                                     <TextBox Text="{Binding SluttVerdi}" Width="100" Grid.Column="3" Grid.Row="2"/>
-                                    <TextBlock Text="{Binding Prosent, StringFormat='{}{0:F2} %'}" Margin="5,0" FontWeight="Bold" Grid.Column="4"/>
+                                    <TextBlock Text="{Binding Prosent, StringFormat='{}{0:F0} %'}" Margin="5,0" FontWeight="Bold" Grid.Column="4"/>
 
                                 </Grid>
 
@@ -137,12 +137,15 @@
                         <TextBlock Text="Max Verdi:" FontSize="15" Grid.Column="2" Grid.Row="6" FontFamily="Artifakt Element Medium"/>
                         <TextBlock Text="{Binding MaxVerdiXY}" FontSize="15" Grid.Column="2" Grid.Row="0" FontFamily="Artifakt Element Medium"/>
 
-                        <TextBlock Text="{Binding TotalProsent, StringFormat='Total Prosent: {0:N2}%'}"
+                        <TextBlock Text="{Binding TotalProsent, StringFormat='Total Prosent: {0:N0}%'}"
                    HorizontalAlignment="Left" VerticalAlignment="Top"
                    FontSize="15"  FontFamily="Artifakt Element Medium" Margin="0,20,0,10"/>
-                        <Button Content="Oppdater Total Prosent" Command="{Binding OppdaterTotalProsetCommand}" Grid.Column="3" Grid.Row="6" Width="130" HorizontalAlignment="Left"/>
-                       
                         
+                        
+                        <Button Content="Oppdater Total Prosent" Command="{Binding OppdaterTotalProsetCommand}" Grid.Column="3" Grid.Row="6" Width="130" HorizontalAlignment="Left"/>
+                        <Button Content="Maker noe" Command="{Binding MarkerBergCommand}" Grid.Column="3" Grid.Row="7" Width="130" HorizontalAlignment="Left"/>
+
+
 
                     </StackPanel>
                     <TextBlock Text="0         Gjennomsiktighet            100" FontSize="15" Grid.Column="0" Grid.Row="1" FontFamily="Artifakt Element Medium"
