--- a/Fargemannen/View/AnalyseZ.xaml
+++ b/Fargemannen/View/AnalyseZ.xaml
@@ -65,7 +65,9 @@
                         
                     </StackPanel>
                     <Button Command="{Binding LagBergmodellCommand}" Content="Generer Bergmodell"  Grid.Column="4" Grid.Row="7" Height="40" Width="120"  Margin="0,3,0,0"/>
-                    <Button Grid.Column="1" Grid.Row="7" Content="Velg Analyseområde" Command="{Binding VelgAnalyseZCommand}"  Margin="0,3,0,0" Height="40"/>
+                    <RadioButton Content="Fargekart" GroupName="AnalyseType" IsChecked="{Binding IsFargekartSelected, Mode=TwoWay}" Grid.Column="1" Grid.Row="7" Margin="0,20,0,0" />
+                    <RadioButton Content="Mesh duk" GroupName="AnalyseType" IsChecked="{Binding IsMeshDukSelected, Mode=TwoWay}" Grid.Column="1" Grid.Row="8" />
+                    <Button Grid.Column="1" Grid.Row="9" Content="Velg Analyseområde" Command="{Binding VelgAnalyseZCommand}"  Margin="0,3,0,0" Height="40"/>
                 </Grid>
             </TabItem>
             <TabItem Header="Sett Intervaller" Height="22" Margin="-2,0,-2,2" VerticalAlignment="Bottom">
@@ -123,7 +125,7 @@ CommandParameter="{Binding}" Grid.Column="0" Grid.Row="1" />
                                     <TextBox Text="{Binding StartVerdi}" Width="100" Grid.Column="3" Grid.Row="1"/>
                                     <TextBlock Text="Slutt-verdi:" FontSize="15" Grid.Column="2" Grid.Row="2" FontFamily="Artifakt Element Medium"/>
                                     <TextBox Text="{Binding SluttVerdi}" Width="100" Grid.Column="3" Grid.Row="2"/>
-                                    <TextBlock Text="{Binding Prosent, StringFormat='{}{0:F2} %'}" Margin="5,0" FontWeight="Bold" Grid.Column="4"/>
+                                    <TextBlock Text="{Binding Prosent, StringFormat='{}{0:F0} %'}" Margin="5,0" FontWeight="Bold" Grid.Column="4"/>
 
                                 </Grid>
 
@@ -141,7 +143,7 @@ CommandParameter="{Binding}" Grid.Column="0" Grid.Row="1" />
                         <TextBlock Text="Max Verdi:" FontSize="15" Grid.Column="2" Grid.Row="6" FontFamily="Artifakt Element Medium"/>
                         <TextBlock Text="{Binding MaxVerdiZ}" FontSize="15" Grid.Column="2" Grid.Row="0" FontFamily="Artifakt Element Medium"/>
 
-                        <TextBlock Text="{Binding TotalProsent, StringFormat='Total Prosent: {0:N2}%'}"
+                        <TextBlock Text="{Binding TotalProsent, StringFormat='Total Prosent: {0:N0}%'}"
            HorizontalAlignment="Center" VerticalAlignment="Top"
            FontSize="15" Margin="10" FontFamily="Artifakt Element Medium"/>
                         <Button Content="Oppdater Total Prosent" Command="{Binding OppdaterTotalProsetCommand}" Grid.Column="3" Grid.Row="6" Width="130"/>
